add function getConsecutiveNoSmokeDays
